            - changed kill focus event of "control_announceinterval" check for number or reset control to default value
            - changed kill focus event of "control_sockettimeout" check for number or reset control to default value
            - changed kill focus event of "control_hubport" check for number or reset control to default value
        - tab 3:
            - added check to blacklist/whitelist to show error if new entry already exists on table
            - changed selected event of category choicectrl element to prevent save button to be active if value has not changed
            - added "sb:StatusText()" on "freshstuff.dat" file validation return
            - fixed issue on "check_new_rule_entrys()" while 1st startup failed
            - added status text on rulename has changed to display if new name is unique or not
            - reload listview on tab 4 on changed event of textctrl_rulename,
            - reload listview on tab 4 on clicked event of checkbox_activate
            - reload listview on tab 4 + 5 on selected event of choicectrl_category
            - fixed issue where rulename was shorten to18 instead of 15 characters on "make_treebook_page()"
            - changed kill focus event of "textctrl_rulename" to check for empty rulename and reset to "Rule #x"
            - changed "add_folder()" of blacklist + whitelist to remember listbox selection
            - changed style and behavior of blacklist / whitelist window
        - tab 4:
            - replaced rules_listbox elements with rules_listview
            - added check to enable/disable delete + clone button on rules_listview selection event + "unprotect_hub_values()"
            - added status text on rulename has changed to display if new name is unique or not
            - added column "active" and "category" to rules listview
            - changed width of listview
            - changed listview header names to values from "table.getRules()" key list