@@ -11,6 +11,7 @@ v0.9 [2016-]
             - changed kill focus event of "control_announceinterval" check for number or reset control to default value
             - changed kill focus event of "control_sockettimeout" check for number or reset control to default value
             - changed kill focus event of "control_hubport" check for number or reset control to default value
+            - fix missing trayicon value on "save_cfg_values()" / thx Sopor
         - tab 3:
             - added check to blacklist/whitelist to show error if new entry already exists on table
             - changed selected event of category choicectrl element to prevent save button to be active if value has not changed
@@ -123,6 +124,7 @@ v0.9 [2016-]
             - fixed font color on log_broadcast
             - replaced check_for_empty_and_set_default with check_for_empty_and_reset_to_default
             - replaced check_for_number_or_return_default with check_for_number_or_reset_to_default
+            - fix on "Init" broadcast
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
